testing/use_nginx_ingress_over_aws_elb/nginx_ingress_helloworld_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    component: helloworld
spec:
  selector:
    component: helloworld
  ports:
    - name: http
      port: 8000
