testing/use_nginx_ingress_over_aws_elb/nginx_ingress_helloworld_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld
spec:
  rules:
    - host: tinhuynh.test
      http:
        paths:
          - path: /
            backend:
              serviceName: helloworld
              servicePort: http
